--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="arthur.mobileapps.com.vendingmachine" >
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
-        android:name="arthur.mobileapps.com.vendingmachine.ApplicationManager"
+        android:name=".ApplicationManager"
         android:allowBackup="true"
         android:icon="@mipmap/launcher"
         android:label="@string/app_name"
@@ -13,9 +14,9 @@
             android:clearTaskOnLaunch="true"
             android:configChanges="orientation"
             android:label="@string/app_name"
+            android:noHistory="true"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.AppCompat.NoActionBar"
-            android:noHistory="true"
             android:windowSoftInputMode="stateAlwaysHidden|adjustPan" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,11 +26,15 @@
         </activity>
         <activity
             android:name=".ui.views.VendingActivity"
-            android:label="@string/title_activity_vending"
             android:clearTaskOnLaunch="true"
             android:configChanges="orientation|screenSize"
-            android:windowSoftInputMode="stateAlwaysHidden|adjustPan"
-            android:theme="@style/CustomActionBarTheme">
+            android:label="@string/title_activity_vending"
+            android:theme="@style/CustomActionBarTheme"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustPan" >
+        </activity>
+        <activity
+            android:name=".ui.views.ScreenSlideActivity"
+            android:label="@string/title_activity_screen_slide" >
         </activity>
     </application>
 
